# cli

./: .env.example  Dockerfile  README.md  docker-build.sh  docker-compose.yml  export.py  pyproject.toml  settings.py
.github/workflows/: dockerimage.yml
beatcovid/: api.py  cli.py  cloud_save.py  controllers.py  logging.py  scheduler.py  serializer.py  settings.py
docker/: export  export-entrypoint.sh  export.Dockerfile
export/: api.py  cli.py  cloud_save.py  controllers.py  scheduler.py  serializer.py  settings.py  sync.py
requirements/: pip.txt
